# lonlat_bng

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  Cross.toml  Makefile  OSTN02_license.txt  OSTN15_license.txt  Pyproj_with_and_without_ostn02.ipynb  README.md  Untitled.ipynb  aggregate_bench.py  appveyor.yml  bng.py  build.rs  index.html  remote_bench.py  rust_BNG.ipynb  search-index.js  test_drop.py
.cargo/: config  config.toml
benches/: benchmarks.csv  benchmarks.rs  cprofile_pyproj.py  cprofile_rust.py  cprofile_rust_cython.py
ci/: before_deploy.ps1  before_deploy.sh  before_deploy_windows.ps1  install.sh  manylinux_rust.sh  preinstall.sh  script.sh
deque/: enum.Stolen.html  fn.new.html  index.html  struct.Stealer.html  struct.Worker.html
include/: header.h
lonlat_bng/: constant.NAN.html  convert_epsg3857_to_wgs84_threaded.v.html  convert_epsg3857_to_wgs84_threaded_vec.v.html  convert_etrs89.v.html  convert_etrs89_to_ll.v.html  convert_etrs89_to_ll_threaded.v.html  convert_etrs89_to_ll_threaded_vec.v.html  convert_etrs89_to_osgb36_threaded_vec.v.html  convert_osgb36_to_etrs89.v.html  convert_osgb36_to_etrs89_threaded_vec.v.html  convert_osgb36_to_ll_threaded_vec.v.html  convert_to_bng_threaded.v.html  convert_to_bng_threaded_vec.v.html  convert_to_etrs89_threaded_vec.v.html  convert_to_lonlat_threaded.v.html  convert_to_lonlat_threaded_vec.v.html  convert_to_osgb36_threaded.v.html  convert_to_osgb36_threaded_vec.v.html  fn.convert_epsg3857_to_wgs84.html  fn.convert_epsg3857_to_wgs84_threaded.html  fn.convert_epsg3857_to_wgs84_threaded_vec.html  fn.convert_etrs89.html  fn.convert_etrs89_to_ll.html  fn.convert_etrs89_to_ll_threaded.html  fn.convert_etrs89_to_ll_threaded_vec.html  fn.convert_etrs89_to_osgb36.html  fn.convert_etrs89_to_osgb36_threaded.html  fn.convert_etrs89_to_osgb36_threaded_vec.html  fn.convert_osgb36.html  fn.convert_osgb36_to_etrs89.html  fn.convert_osgb36_to_etrs89_threaded.html  fn.convert_osgb36_to_etrs89_threaded_vec.html  fn.convert_osgb36_to_ll.html  fn.convert_osgb36_to_ll_threaded.html  fn.convert_osgb36_to_ll_threaded_vec.html  fn.convert_to_bng_threaded.html  fn.convert_to_bng_threaded_vec.html  fn.convert_to_etrs89_threaded.html  fn.convert_to_etrs89_threaded_vec.html  fn.convert_to_lonlat_threaded.html  (+7 more)
ostn15_phf/: Adjustment.t.html  GridRefs.t.html  fn.get_shifts_ffi.html  fn.ostn15_lookup.html  get_shifts_ffi.v.html  index.html  ostn15_lookup.v.html  sidebar-items.js  struct.Adjustment.html  struct.GridRefs.html
phf/: index.html  struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html  trait.PhfHash.html
phf_shared/: fn.displace.html  fn.get_index.html  fn.hash.html  fn.split.html  index.html  trait.PhfHash.html
rayon/: enum.InitError.html  fn.dump_stats.html  fn.initialize.html  fn.join.html  (+3 more)
(+265 files in other folders)
