[package]
name = "lonlat_bng"
description = "Convert longitude and latitude coordinates to BNG coordinates, and vice versa"
version = "0.6.36"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
license = "MIT"
keywords = ["OSGB36", "BNG", "Geo", "ETRS89", "OSTN02", "OSTN15"]
repository = "https://github.com/urschrei/lonlat_bng"
documentation = "https://urschrei.github.io/lonlat_bng/"
readme = "README.md"
edition = "2021"

[dev-dependencies]
criterion = "0.4.0"

[build-dependencies]
cbindgen = "0.24.2"

[dependencies]
libc = "0.2.147"
rand = "0.8.5"
ostn15_phf = { git = "https://github.com/urschrei/ostn15_phf.git" }
rayon = "1.10.0"

[features]
headers = []

[lib]
name = "lonlat_bng"
crate-type = ["rlib", "cdylib"]
test = true
doctest = false
doc = true

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "benchmarks"
harness = false

