[package]
name = "lonlat_bng"
description = "Convert longitude and latitude coordinates to BNG coordinates, and vice versa"
version = "0.8.1"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
license = "BlueOak-1.0.0"
keywords = ["OSGB36", "BNG", "ETRS89", "OSTN02", "OSTN15"]
repository = "https://github.com/urschrei/lonlat_bng"
readme = "README.md"
edition = "2024"
categories = ["science::geo"]

[dev-dependencies]
criterion = "0.7.0"

[build-dependencies]
cbindgen = "0.29.0"

[dependencies]
libc = "0.2.174"
rand = "0.10.0"
ostn15_phf = "1.3.0"
rayon = "1.10.0"

[features]
headers = []

[lib]
name = "lonlat_bng"
crate-type = ["rlib", "cdylib"]
test = true
doctest = false
doc = true

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "benchmarks"
harness = false

